# garbage-collector-robot

./: .gitignore  LICENSE  README.md
src/activity_managers/: CMakeLists.txt  package.xml  setup.py
src/activity_managers/src/: ros_activity_manager.py
src/activity_managers/src/activity_managers/: abstract_activity_manager.py
src/activity_managers/test/: activity_managers_test.py  manipulator_test.py
src/garbage_collector_robot_msgs/: CMakeLists.txt  package.xml
src/mobile_manipulator_body/config/: arm_control.yaml
src/mobile_manipulator_body/launch/: arm_gazebo_control.launch  base_gazebo_control.launch  mobile_manipulator_gazebo.launch
src/mobile_manipulator_body/urdf/: lidar.xacro  mobile_manipulator.urdf  mobile_manipulator_2.urdf  mobile_manipulator_gripper.urdf.xacro  robot_arm.urdf  robot_base.urdf
src/rg2_simulation/rg2_description/urdf/: rg2.gazebo.xacro  rg2.transmissions.xacro  rg2.urdf.xacro  rg2_rev2.urdf.xacro
src/ros_utils_py/: CMakeLists.txt  config.code-workspace  package.xml  setup.py
src/ros_utils_py/src/ros_utils_py/: ros_node.py  ros_publisher.py  ros_service.py  ros_subscriber.py
src/ros_utils_py/test/: generic_ros_node_test.py  publisher_test_node.py  service_client_test_node.py  service_test_node.py  subscriber_test_node.py
