<?xml version="1.0"?>
<package format="2">
  <name>garbage_collector_robot_msgs</name>
  <version>0.0.0</version>
  <description>The garbage_collector_robot_msgs package</description>

  <author email="mksetaro@gmail.com">Michelangelo Setaro</author>
  <maintainer email="mksetaro@gmail.com">Michelangelo Setaro</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
