<?xml version="1.0"?>
<package format="2">
  <name>ros_utils_py</name>
  <version>0.0.0</version>
  <description>The ros_utils_py package</description>

  <maintainer email="mksetaro@gmail.com">Michelangelo Setaro</maintainer>
  <author email="mksetaro@gmail.com">Michelangelo Setaro</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
